--- a/src/pages/app.astro
+++ b/src/pages/app.astro
@@ -7,12 +7,14 @@ import EditorPanel from "../components/editor/EditorPanel";
 
 <Layout title="Dashboard - Sudoku">
   <SessionGuard client:load>
-    <div class="flex h-screen overflow-hidden">
-      <div class="w-4/5 overflow-y-auto border-r">
-        <DiagramsPanel client:load />
-      </div>
-      <div class="w-1/5 overflow-y-auto">
-        <EditorPanel client:load />
+    <div class="flex h-screen flex-col overflow-hidden">
+      <div class="flex flex-1 overflow-hidden">
+        <div class="w-4/5 overflow-y-auto border-r">
+          <DiagramsPanel client:load />
+        </div>
+        <div class="w-1/5 overflow-y-auto">
+          <EditorPanel client:load />
+        </div>
       </div>
     </div>
   </SessionGuard>
