--- a/src/pages/app.astro
+++ b/src/pages/app.astro
@@ -7,12 +7,12 @@ import EditorPanel from "../components/editor/EditorPanel";
 
 <Layout title="Dashboard - Sudoku">
   <SessionGuard client:load>
-    <div class="flex h-screen flex-col overflow-hidden">
+    <div class="flex h-screen flex-col overflow-hidden" data-testid="app-dashboard">
       <div class="flex flex-1 overflow-hidden">
-        <div class="w-4/5 overflow-y-auto border-r">
+        <div class="w-4/5 overflow-y-auto border-r" data-testid="diagrams-panel-container">
           <DiagramsPanel client:load />
         </div>
-        <div class="w-1/5 overflow-y-auto">
+        <div class="w-1/5 overflow-y-auto" data-testid="editor-panel-container">
           <EditorPanel client:load />
         </div>
       </div>
